--- a/sections/icons-block.liquid
+++ b/sections/icons-block.liquid
@@ -1,24 +1,24 @@
 <section class="icon-element [ element ]">
   <div class="icon-element__wrap">
     <div class="icon-element__intro">
-      <div class="icon-element__intro__constaint">
+      <div class="icon-element__intro__constraint">
         <h2>
-          <b>{{ block.settings.heading }}</b>
+          <b>{{ section.settings.heading }}</b>
         </h2>
-        {{ block.settings.text }}
+        {{ section.settings.text }}
       </div>
     </div>
 
     {%- for block in section.blocks -%}
       <div class="icon-element__item">
         <div class="icon-element__image">
-          {{ section.settings.image | image_url: width: 400, height: 400 | image_tag }}
+          {{ block.settings.icon | image_url: width: 400, height: 400 | image_tag }}
         </div>
 
         <div class="icon-element__text">
-          <h4 class="no-margin">
+          <h6 class="no-margin">
             <b>{{ block.settings.title }}</b>
-          </h4>
+          </h6>
 
           <div class="icon-element__inner">
             {{ block.settings.copy }}
@@ -26,6 +26,17 @@
         </div>
       </div>
     {%- endfor -%}
+  </div>
+
+  {% comment %}
+    Marquee
+  {% endcomment %}
+  <div class="related-products__marquee">
+    <div class="related-products__marquee__animation">
+      <span>Through lifes most vital moments</span>
+      <span>Through lifes most vital moments</span>
+      <span>Through lifes most vital moments</span>
+    </div>
   </div>
 </section>
 
