--- a/sections/icons-block.liquid
+++ b/sections/icons-block.liquid
@@ -12,7 +12,7 @@
     {%- for block in section.blocks -%}
       <div class="icon-element__item">
         <div class="icon-element__image">
-          {{ block.settings.icon | image_url: width: 400, height: 400 | image_tag }}
+          <img src="{{ block.settings.icon | image_url }}" loading="lazy'">
         </div>
 
         <div class="icon-element__text">
