--- a/source/sections/banner-collection.scss
+++ b/source/sections/banner-collection.scss
@@ -1,6 +1,10 @@
 .banner-collection {
     position: relative;
 
+    .banner-collection-text {
+        top: 65% !important;
+    }
+
     &-image {
         aspect-ratio: 16/5;
         background: var(--off-white);
@@ -8,6 +12,13 @@
         width: 100%;
         max-height: 72rem;
         min-height: 30rem;
+
+        &:after {
+            @include pseudo;
+            background-image: linear-gradient(180deg, rgba(black, 0) 0%, black 100%);
+            @include full;
+            opacity: 0.3;
+        }
 
         img {
             position: absolute;
