--- a/source/sections/banner.scss
+++ b/source/sections/banner.scss
@@ -8,6 +8,13 @@
                 max-height: 72rem;
                 min-height: 30rem;
             }
+
+            &:after {
+                @include pseudo;
+                background-image: linear-gradient(180deg, rgba(black, 0) 0%, black 100%);
+                @include full;
+                opacity: 0.3;
+            }
         }
         .banner-text {
             top: 65%;
