--- a/source/sections/collection-grid.scss
+++ b/source/sections/collection-grid.scss
@@ -79,6 +79,7 @@
 
             &__image {
                 width: 100%;
+                margin-bottom: 2rem;
 
                 img {
                     width: 100%;
