--- a/source/sections/header.scss
+++ b/source/sections/header.scss
@@ -31,6 +31,10 @@
     &.nav-down {
         transform: translateY(0);
         opacity: 1;
+
+        .header-nav__item__link {
+            -webkit-text-fill-color: transparent !important;
+        }
     }
 
     &-wrap {
